# PixelForge

./: .gitignore  LICENSE  Makefile  README.md
backend/: conftest.py  manage.py  pyproject.toml  ruff.toml
backend/config/: api_urls.py  asgi.py  celery.py  dev_bootstrap.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  dev.py  stage.py  test.py
backend/core/: __init__.py
backend/core/_common/: __init__.py  base_models.py  base_serializers.py  base_services.py  base_viewsets.py  exception_handler.py  exceptions.py  mixins.py  pagination.py  registry.py  responses.py
backend/core/_event_bus/: __init__.py  bus.py  envelope.py  handlers.py  registry.py  schemas.py
backend/core/_logger/: __init__.py  config.py  filters.py  formatters.py  handlers.py  middleware.py
backend/core/_task_queue/: __init__.py  admin.py  apps.py  base_task.py  constants.py  models.py  retry_policies.py  tasks.py
backend/core/accounts/: __init__.py  admin.py  apps.py  event_handlers.py  managers.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/core/ai_providers/: __init__.py  apps.py  (+10 more)
backend/env/: .env.dev.example  .env.prod.example  .env.stage.example
backend/modules/: .gitkeep  __init__.py
backend/tests/: test_accounts.py  test_ai_providers.py  test_api_keys.py  test_audit_log.py  test_auth.py  test_catalog.py  test_common.py  test_event_bus.py  test_file_storage.py  test_health.py  test_logger.py  test_notifications.py  test_payments.py  test_pixelforge_modules.py  test_rbac.py  test_subscriptions.py  test_task_queue.py
(+328 files in other folders)
