[project]
name = "backend"
version = "0.1.0"
description = "AI service framework backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.2",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "cryptography>=46.0.5",
    "daphne>=4.2.1",
    "dj-rest-auth>=7.2.0",
    "django>=5,<6",
    "django-allauth>=65.15.0",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16,<3.17",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "redis>=6.4.0",
    "stripe>=12.0.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.11.0",
    "ipython>=9.11.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["."]
testpaths = ["tests"]
